tests/baselines/reference/parserMemberAccessor1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessor1.ts(2,7): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessor1.ts (1 errors) ====
    class C {
      get foo() { }
          ~~~
!!! error TS2378: A 'get' accessor must return a value.
      set foo(a) { }
    }